# cyberbuddha

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  render.yaml  schema.sql  vite.config.ts  vitest.config.ts  wrangler.toml
.claude/commands/: architect.md
coverage/.tmp/: coverage-0.json
public/: index.html
public/src/: main.ts
public/src/core/: constants.ts  dom.ts  state.ts
public/src/effects/: background.ts  dharma.ts  halo.ts  lotus.ts  ripple.ts  trigger.ts
public/src/messages/: queue.ts
public/src/wallet/: connect.ts  payment.ts  provider.ts  ui.ts
public/src/wish/: service.ts  ui.ts
public/src/wish-wall/: service.ts  ui.ts
public/styles/: effects.css  layout.css  terminal.css  variables.css  wallet.css  wish-wall.css
server/: .env.example  main.py  pyproject.toml  requirements.txt
shared/: types.ts
src/: config.ts  index.ts  types.ts
tests/unit/: shared.test.ts
